--- a/death-statistics/time/index.html
+++ b/death-statistics/time/index.html
@@ -654,7 +654,7 @@ title: "Death statistics over different time periods "
                     </table><button class="btn btn--secondary btn--mobile-table-hide">Close table</button>
                   </figure>
                   <!-- <p class="font-xsmall margin-top--3"><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/datasets/deathsregisteredinenglandandwalesseriesdrreferencetables">Source: Deaths registered in England and Wales (series DR)</a></p> -->
-                  <p class="font-xsmall" style="margin-top: -70px;"><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/datasets/deathsregisteredinenglandandwalesseriesdrreferencetables">Source: Deaths registered in England and Wales (series DR)</a></p>
+                  <p class="font-xsmall" style="margin-top: -70px;"><a href="../dataset">Source: Deaths registered in England and Wales (series DR)</a></p>
                 </div>
               </div>
             </div>
