Adding in caveats

--- a/knife-crime-statistics/index.html
+++ b/knife-crime-statistics/index.html
@@ -45,6 +45,7 @@ title: "Knife crime statistics"
   <div class="col-wrap">
     <div class="col col--md-two-thirds col--lg-two-thirds">
       <h1>Knife crime statistics</h1>
+      <p>Statistics from police recorded crime</p>
     </div>
   </div>
 
@@ -459,6 +460,12 @@ title: "Knife crime statistics"
 
                 <p class="font-xsmall margin-top--3"><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/datasets/crimeinenglandandwalesotherrelatedtables">Source: Crime in England and Wales: Other related tables</a></p>
 
+                <div class="warning-text">
+                  <span class="warning-text__icon" aria-hidden="false">!</span>
+                  <strong class="warning-text__text">
+                    <span class="warning-text__assistive">Warning</span>
+                    An increase in the number of crimes recorded by the police does not necessarily mean the level of crime has increased.</strong>
+                  </div>
               </div>
             </div>
           </div>
@@ -614,7 +621,10 @@ title: "Knife crime statistics"
 
                 <p class="font-xsmall margin-top--3"><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/datasets/crimeinenglandandwalesotherrelatedtables">Source: Crime in England and Wales: Other related tables</a></p>
 
-
+                <p class="heading-xsmall list-heading">Notes:</p>
+                <ol>
+                  <li class="font-xsmall margin-bottom--1">This table does not include data from Greater Manchester Police.</li>
+                </ol>
 
               </div>
             </div>
@@ -1179,6 +1189,8 @@ title: "Knife crime statistics"
     </div>
   </div>
 
+  <h2>How to interpret these statistics</h2>
+  <p></p>
 
   <p class="margin-top--4"><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/datalist?filter=datasets">View all data</a></p>
 
