Update prototype homepage

--- a/index.html
+++ b/index.html
@@ -35,9 +35,14 @@ title: "Find an answer alpha prototype"
           <th style="width: 500px;">Changes</th>
         </tr>
         <tr>
+          <td><a href="https://v4--find-an-answer-alpha.netlify.com/knife-crime-statistics">Version 4</td>
+          <td>4th July</td>
+          <td>Created knife crime statistics prototype to explore how we can help people understand caveats. We found that in general people saw the footnote under the over time table. However, people missed the caveat explaining that Greater Manchester was excluded from the offense type table.</td>
+        </tr>
+        <tr>
           <td><a href="https://v3--find-an-answer-alpha.netlify.com/death-statistics/cause">Version 3</td>
-          <td>TBC</td>
-          <td>Iterated to include next steps to finding the answer to your question if it is not covered by the page</td>
+          <td>4th July</td>
+          <td>Iterated to include next steps to finding the answer to your question if it is not covered by the page. User research found people struggled to make the connection between the 'source' under the table and that being where wider/historic data can be found.</td>
         </tr>
         <tr>
           <td><a href="https://v2--find-an-answer-alpha.netlify.com/death-statistics/v2/main">Version 2</td>
