Commit work so far on knife caveats

--- a/knife-crime-statistics/index.html
+++ b/knife-crime-statistics/index.html
@@ -51,7 +51,8 @@ title: "Knife crime statistics"
   </div>
   <div class="col-wrap">
     <div class="col">
-      <h2>Knife crime by location (2018)</h2>
+      <h2 style="margin-bottom: 0;">Knife crime by location</h2>
+      <h3 style="font-weight: 400; margin-top: 0;">England and Wales, 2018</h3>
       <figure class="figure" id="table-">
         <table class="table">
           <thead>
@@ -358,8 +359,10 @@ title: "Knife crime statistics"
   </div>
   <div class="col-wrap">
     <div class="col">
-      <h2>Knife crime in England and Wales (2010-2018)</h2>
-      <figure class="figure" id="table-">
+      <h2 style="margin-bottom: 0;">Knife crime since 2010</h2>
+      <h3 style="font-weight: 400; margin-top: 0;">England and Wales, 2010-2018</h3>
+
+      <figure class="figure" id="table">
         <table class="table">
           <thead>
             <tr class="table__header-row table__nowrap">
@@ -441,12 +444,9 @@ title: "Knife crime statistics"
   </div>
   <div class="col-wrap">
     <div class="col col--md-two-thirds col--lg-two-thirds">
-
-      <p class="heading-xsmall list-heading">Notes:</p>
-      <ol>
-        <li class="font-xsmall margin-bottom--1">An increase in the number of knife crimes recorded by the police does not necessarily mean the level of crime has increased. <a href="#interpret">Find out more about how to interpret these statistics</a></li>
-      </ol>
-
+      <h4>What you need to know about these statistics</h4>
+      <p>An increase in the number of knife crimes recorded by the police does not necessarily mean the level of crime has increased.</p>
+      <p><a href="#interpret">Find out more about how to interpret these statistics</a>.<p>
     </div>
   </div>
   <div class="col-wrap">
