Prepare prototype for loop 11 benchmark testing

--- a/death-statistics/cause/index.html
+++ b/death-statistics/cause/index.html
@@ -2735,8 +2735,8 @@ title: "Causes of deaths"
 
 
 <script src="//cdn.loop11.com/embed.js" type="text/javascript" async="async"></script>
-<script>
+<!-- <script>
 function updateURL(id) {
   window.location.hash = id
 }
-</script>
+</script> -->
