--- a/death-statistics/population-characteristics/index.html
+++ b/death-statistics/population-characteristics/index.html
@@ -423,6 +423,7 @@ title: "Death statistics broken down by population characteristics"
                 </tbody></table><footer class="figure__footer">
                 </footer>
                 </figure>
+                <p class="font-xsmall margin-top--3">Data for previous years can be downloaded from our <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/datasets/deathsregisteredinenglandandwalesseriesdrreferencetables">dataset page</a>.</p>
 
 
               </div>
