--- a/knife-crime-statistics/index.html
+++ b/knife-crime-statistics/index.html
@@ -47,17 +47,18 @@ title: "Knife crime statistics"
       <h1>Knife crime statistics</h1>
       <p>Figures on knife crime levels and trends for England and Wales based on police recorded crime data.</p>
 
-    </div>
-  </div>
-  <div class="col-wrap">
-    <div class="col">
-      <h2 style="margin-bottom: 0;">Knife crime by location</h2>
-      <h3 style="font-weight: 400; margin-top: 0;">England and Wales, 2018</h3>
+      <h2>By location</h2>
+      <!-- <h2>Knife crime by area of England and Wales, 2018</h2> -->
+       <h3 style="padding-top: 0;">Knife and sharp instrument offences by police force area, year ending March 2019</h3>
+     </div>
+   </div>
+       <div class="col-wrap">
+         <div class="col">
       <figure class="figure" id="table-">
         <table class="table">
           <thead>
             <tr class="table__header-row table__nowrap">
-              <th scope="col">Area Name</th>
+              <th scope="col">Police Force Area Name</th>
               <th scope="col">Number of offences</th>
               <th scope="col">Percentage of all crimes</th>
             </tr>
@@ -355,12 +356,14 @@ title: "Knife crime statistics"
   <div class="col-wrap">
     <div class="col col--md-two-thirds col--lg-two-thirds">
 
+
+      <h2>Change since 2010</h2>
+      <h3 style="padding-top: 0;">Knife and sharp instrument offences in England and Wales, 2010-2018</h3>
+
     </div>
   </div>
   <div class="col-wrap">
-    <div class="col">
-      <h2 style="margin-bottom: 0;">Knife crime since 2010</h2>
-      <h3 style="font-weight: 400; margin-top: 0;">England and Wales, 2010-2018</h3>
+    <div class="col"
 
       <figure class="figure" id="table">
         <table class="table">
@@ -445,13 +448,15 @@ title: "Knife crime statistics"
   <div class="col-wrap">
     <div class="col col--md-two-thirds col--lg-two-thirds">
       <h4>What you need to know about these statistics</h4>
-      <p>An increase in the number of knife crimes recorded by the police does not necessarily mean the level of crime has increased.</p>
-      <p><a href="#interpret">Find out more about how to interpret these statistics</a>.<p>
+      <p>An increase in the number of knife crimes recorded by the police does not necessarily mean the level of crime has increased. <a href="#interpret">Find out more about how to interpret these statistics</a>.<p>
+
+    <h2>Type of crime</h2>
+    <h3 style="padding-top: 0;">Knife and sharp instrument offences by offence type, England and Wales, 2010-2018</h3>
     </div>
   </div>
   <div class="col-wrap">
     <div class="col">
-      <h2>Knife crime by offence type (2010-2018)</h2>
+
       <figure class="figure" id="table-">
         <table class="table">
           <thead>
@@ -588,16 +593,14 @@ title: "Knife crime statistics"
   <div class="col-wrap">
     <div class="col col--md-two-thirds col--lg-two-thirds">
 
-      <p class="heading-xsmall list-heading">Notes:</p>
-      <ol>
-        <li class="font-xsmall margin-bottom--1">This data does not include Greater Manchester Police due to a recent change in counting methods.</li>
-      </ol>
+      <h4>What you need to know about these statistics</h4>
+      <p>This data does not include Greater Manchester Police due to a recent change in counting methods.</p>
 
     </div>
   </div>
   <div class="col-wrap">
     <div class="col">
-      <h2>Knife crimes involving murder by location (2018)</h2>
+      <h3 style="padding-top: 0;">Knife and sharp instrument offences involving homicide, 2018</h3>
       <figure class="figure" id="table-">
         <table class="table">
           <thead>
